# robot_grasp1

./: .gitignore  README.md  batch_test_runner.py  build_interfaces.sh  check.sh  clean.sh  des.txt  detection_monitor.sh  dev.sh  dev_track.sh  enhanced_scan_results_20250827_170710.csv  enhanced_scan_results_20250827_171442.csv  full_environment.yml  generate_test_scenarios.py  integrated_launch.sh  one_click_test.sh  quick_test_script.sh  requirements.txt  restart.sh  restart_state.sh  restart_state_tr.sh  run_detection.sh  run_detection_node.sh  scan_performance_results_20250827_162347.csv  scan_performance_results_20250904_021819.csv  sd_dev.sh  sd_start.sh  similarity_calculator.py  test_cuda.py  test_scan_system.sh  test_simi_plot.py  tracking_prompt.txt  trigger_detection.py  visualization_generator.py  草稿.txt
data/: adaptive_learning.json
fixed_results_20250829_000328/: final_test_results.json  performance_data.json  user_annotations.json
historical_test_output/: test_report_20250818_234103.json
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
parsed_results_20250828_231347/: annotations_progress_10_of_12.json  annotations_progress_11_of_12.json  annotations_progress_12_of_12.json  annotations_progress_1_of_12.json  annotations_progress_2_of_12.json  (+20 more)
src/vision_ai_interfaces/: CMakeLists.txt
src/vision_ai_interfaces/msg/: GridPosition.msg  RelativePosition.msg  ScanPlan.msg  StitchResult.msg  Test.msg  Waypoint.msg
src/vision_ai_interfaces/srv/: PlanScan.srv  ProcessDetection.srv  ProcessImage.srv  ProcessStitching.srv  SetGripperClose.srv
(+329 files in other folders)
